<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Radaee PDF Master</string>
    <string name="txt_recent_file">Recent documents</string>
    <string name="txt_recent_file_empty">No recent documents, use browse button on the left to browse and open document</string>
    <string name="message_open_err_password">Open Failed: Invalid Password</string>
    <string name="message_open_err_encryption">Open Failed: Unknown Encryption</string>
    <string name="message_open_err_file">Open Failed: Damaged or Invalid %1$s file</string>
    <string name="message_open_err_path">Open Failed: Access denied or Invalid path</string>
    <string name="message_open_err_unknown">Open Failed: Unknown Error</string>
    <string name="text_undo_str">Undo</string>
    <string name="text_redo_str">Redo</string>
    <string name="text_view_mode_label">View Mode</string>
    <string name="text_view_vert_label">Vertical Mode</string>
    <string name="text_view_horz_label">Horizontal Mode</string>
    <!--<string name="text_view_reflow_label">Text Reflow</string>-->
    <string name="text_view_single_label">Single Page</string>
    <string name="text_view_dual_label">Double Page</string>
    <string name="text_action_search_label">Search Text</string>
    <string name="text_convert_pdf_label">Convert to PDF</string>
    <string name="text_action_settings_label">Settings</string>
    <string name="text_book_mark_list_label">Bookmark List</string>
    <string name="text_action_share_label">Share</string>
    <string name="text_action_about_label">About Radaee PDF Master</string>
    <string name="text_action_menu_label">Menu</string>
    <string name="text_action_attachment_label">Attachments</string>
    <string name="text_search_prev_label">Backward</string>
    <string name="text_confirm_label">Confirm</string>
    <!--<string name="text_cancel_label">Cancel</string>-->
    <string name="notification_label">Attention</string>
    <string name="notification_save_label">Document has been modified, do you want to save your change(s)?</string>

    <string name="button_positive_label">Yes</string>
    <string name="button_negative_label">No</string>
    <string name="button_cancel_label">Cancel</string>
    <string name="message_wait_label">Please wait</string>
    <string name="message_loading_label">Loading %1$s file…</string>
    <string name="message_add_bookmark_success_label">Bookmark has been added successfully.</string>
    <string name="message_bookmark_exist_label">Bookmark already exists.</string>
    <string name="message_bookmark_error_label">Sorry, add bookmark failed.</string>
    <string name="button_ok_label">OK</string>
    <string name="text_bookmark_label">Page: %1$s</string>

    <string name="text_copy_hint">Copied following text to clipboard: </string>
    <string name="text_write_failed_hint">can\'t write or encrypted!</string>
    <string name="text_add_annot_failed_hint">add annotation failed!</string>
    <string name="message_selected_text_title">Process selected text</string>
    <string name="text_convert_pdf_success_hint">Document has been saved as \"%1$s\"</string>
    <string name="text_convert_pdf_error_hint">Cannot convert current document to PDF file.</string>

    <string name="text_meta_label">Document info</string>
    <!--<string name="text_meta_title_label">PDF Meta data</string>-->
    <string name="text_help_label">Help</string>
    <string name="text_next_label">Next</string>
    <string name="text_done_label">Done</string>
    <!--<string name="text_match_whole_word_label">Match whole word</string>
    <string name="text_match_case_label">Match case</string>-->
    <string name="hint_not_support">Not Support yet.</string>
    <string name="message_url_jump_label">External URL clicked, would you like to jump to this URL: %1$s</string>

    <string name="message_cannot_open_document_label">Failed to open external document.</string>
    <string name="text_open_document_hint_label">Due to updated privacy policy from Android Q, you may not be able to see recent files here. Please click on the file button on the left to open document.</string>
    <string name="text_cannot_get_token_hint">Authorization failed, please re-authorize again.</string>
    <string name="text_token_expired_hint">Token expired, please re-authorize again.</string>
    <string name="text_downloading_hint">Downloading</string>
    <string name="text_download_error_label">An error has occurred</string>
    <string name="text_loading_label">Loading</string>
    <string name="text_storage_permission_label">This app requires storage access to download and upload files.</string>
    <string name="text_dropbox_path_label" translatable="false">/Apps/Radaee PDF Master%1$s</string>
    <string name="text_refresh_label">Refresh</string>
    <string name="upload_to_dropbox_label">This is a document from Dropbox, do you want to upload it back to Dropbox and synchronize?</string>
    <string name="merge_pdf_label">Merge PDF</string>
    <string name="dest_file_label">File 1</string>
    <string name="source_file_label">File 2</string>
    <string name="convert_pdf_label">Convert to PDF</string>
    <string name="text_merge_hint_label">File 2 will be merged into file 1 when click on OK button</string>
    <string name="encrypt_pdf_label">Encrypt PDF</string>
    <string name="decrypt_pdf_label">Decrypt PDF</string>
    <string name="not_encrypted_pdf_hint">PDF is not encrypted</string>
    <string name="encrypt_failed_hint">Failed to encrypt PDF</string>
    <string name="encrypt_success_hint">Encrypted file: "%1$s" was generated successfully.</string>
    <string name="decrypt_success_hint">Decrypted file: "%1$s" was generated successfully.</string>

    <string name="compress_pdf_label">Compress PDF</string>
    <string name="compress_success_hint">Compressed file: "%1$s" was generated successfully.</string>
    <string name="compress_failed_hint">Failed to compress PDF</string>

    <string name="convert_pdfa_label">Convert to PDF/A</string>
    <string name="convert_success_hint">PDF/A file: "%1$s" was generated successfully.</string>
    <string name="convert_failed_hint">Failed to convert PDF to PDF/A</string>
    <string name="permission_dialog_title">Permission required</string>
    <string name="permission_dialog_content">Due to privacy policy update after Android 11, we also need to update our storage access permission to browse document files. Please click on OK button to authorize us.</string>
    <string name="permission_denied_content">Sorry without necessary permission, some functionalities may be unavailable.</string>

    <string name="copy_url">Copy URL to clipboard</string>
    <string name="success_copy_url">Copied the URL to clipboard.</string>
</resources>
