<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_view_mode"
        android:icon="@drawable/ic_view_mode"
        android:orderInCategory="100"
        android:title="@string/text_view_mode_label"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_view_vert"
                android:icon="@drawable/ic_view_vert"
                android:title="@string/text_view_vert_label" />
            <item
                android:id="@+id/action_view_horz"
                android:icon="@drawable/ic_view_horz"
                android:title="@string/text_view_horz_label" />
            <item
                android:id="@+id/action_view_page"
                android:icon="@drawable/ic_view_single"
                android:title="@string/text_view_single_label" />
            <item
                android:id="@+id/action_view_dual"
                android:icon="@drawable/ic_view_double_page"
                android:title="@string/text_view_dual_label" />
        </menu>
    </item>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/text_action_search_label"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_convert_pdf"
        android:icon="@drawable/ic_convert_pdf"
        android:orderInCategory="100"
        android:title="@string/text_convert_pdf_label"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="100"
        android:title="@string/text_action_share_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/text_help_label" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:orderInCategory="100"
        android:title="@string/text_action_about_label"
        app:showAsAction="ifRoom" />
</menu>