<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:columnCount="3"
    android:orientation="horizontal"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_merge_pdf"
        android:orientation="vertical"
        android:layout_columnWeight="1"
        android:layout_margin="5dp">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_merge_pdf"
            android:layout_gravity="center"/>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/merge_pdf_label"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_convert_pdf"
        android:orientation="vertical"
        android:layout_columnWeight="1"
        android:layout_margin="5dp">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_convert_pdf"
            android:layout_gravity="center"/>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/convert_pdf_label"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_encrypt_pdf"
        android:orientation="vertical"
        android:layout_columnWeight="1"
        android:layout_margin="5dp">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_encryption"
            android:layout_gravity="center"/>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/encrypt_pdf_label"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_decrypt_pdf"
        android:orientation="vertical"
        android:layout_columnWeight="1"
        android:layout_margin="5dp">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_decryption"
            android:layout_gravity="center"/>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/decrypt_pdf_label"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_compress_pdf"
        android:orientation="vertical"
        android:layout_columnWeight="1"
        android:layout_margin="5dp">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_compress_pdf"
            android:layout_gravity="center"/>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/compress_pdf_label"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_convert_pdfa"
        android:orientation="vertical"
        android:layout_columnWeight="1"
        android:layout_margin="5dp">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_convert_pdfa"
            android:layout_gravity="center"/>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/convert_pdfa_label"/>
    </LinearLayout>
</GridLayout>